--- a/YourBoots-Shop-App/src/app/components/slider/slider.component.scss
+++ b/YourBoots-Shop-App/src/app/components/slider/slider.component.scss
@@ -5,6 +5,7 @@
     position: relative;
     max-width: 1440px;
     height: 350px;
+    overflow: hidden;
   }
   &__slids {
     width: 100%;
